[tool.poetry]
name = "sandobot"
version = "0.1.0"
description = ""
authors = ["Benjamin D. Pedigo <bpedigo@jhu.edu>"]

[tool.poetry.dependencies]
python = "3.9.*"
tweepy = "^4.10.0"
pandas = "^1.4.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.9.2"
ipykernel = "^6.6.0"